# ink-seminar-workshop

./: .gitignore  Cargo.toml  README.md  project_structure.md
contracts/: Cargo.toml  lib.rs
contracts/contracts/exchange/: Cargo.toml  lib.rs
contracts/contracts/usd_token/: Cargo.toml  lib.rs
contracts/derive/: Cargo.toml  lib.rs
contracts/impls/: exchange.rs  exchange_data.rs  mod.rs  usd_token.rs
contracts/traits/: exchange.rs  mod.rs  usd_token.rs
